--- a/co2Footprint/src/css/quasar.variables.scss
+++ b/co2Footprint/src/css/quasar.variables.scss
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #84AC47;
+$secondary : #AB9E46;
+$accent    : #46AB59;
 
 $dark      : #1D1D1D;
-$dark-page : #121212;
+$dark-page : #121213;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive  : #4CF56C;
+$negative  : #F5DF4C;
+$info      : #B1F54B;
+$warning   : #6BF54C;
